fixed scaling on iPhones

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -34,7 +34,7 @@
     justify-content: center;
     flex-direction: column;
     position: absolute;
-    width: 80%;
+    width: 90%;
     height: 100%;
     padding-left: 10%;
 
@@ -48,7 +48,7 @@
     }
 
     .title {
-      font-size: rem(40px);
+      font-size: rem(35px);
       color: #fff;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
       margin: rem(10px) 0;
@@ -59,7 +59,7 @@
     }
 
     .description {
-      font-size: rem(24px);
+      font-size: rem(20px);
       color: #fff;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
       margin: 0;
@@ -70,7 +70,7 @@
     }
 
     .buttons {
-      margin-top: rem(50px);
+      margin-top: rem(25px);
     }
 
     .button {
